3822B1PE3/9_gelu_ocl/kazunin_nikita/log.txt
In file included from /usr/include/CL/cl.h:20,
                 from /home/crazyproger/sandbox/gpu-2025/3822B1PE3/9_gelu_ocl/kazunin_nikita/gelu_ocl.cpp:2:
/usr/include/CL/cl_version.h:22:104: note: ‘#pragma message: cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 300 (OpenCL 3.0)’
   22 | #pragma message("cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 300 (OpenCL 3.0)")
      |                                                                                                        ^
/home/crazyproger/sandbox/gpu-2025/3822B1PE3/9_gelu_ocl/kazunin_nikita/gelu_ocl.cpp: In function ‘std::vector<float> GeluOCL(const std::vector<float>&, int)’:
/home/crazyproger/sandbox/gpu-2025/3822B1PE3/9_gelu_ocl/kazunin_nikita/gelu_ocl.cpp:54:50: warning: ‘_cl_command_queue* clCreateCommandQueue(cl_context, cl_device_id, cl_command_queue_properties, cl_int*)’ is deprecated [-Wdeprecated-declarations]
   54 |     cl_command_queue queue = clCreateCommandQueue(context, device, 0, &err);
      |                              ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/crazyproger/sandbox/gpu-2025/3822B1PE3/9_gelu_ocl/kazunin_nikita/gelu_ocl.cpp:2:
/usr/include/CL/cl.h:1906:1: note: declared here
 1906 | clCreateCommandQueue(cl_context                     context,
      | ^~~~~~~~~~~~~~~~~~~~
/home/crazyproger/sandbox/gpu-2025/3822B1PE3/9_gelu_ocl/kazunin_nikita/gelu_ocl.cpp:59:22: error: ‘strlen’ was not declared in this scope
   59 |     size_t src_len = strlen(src);
      |                      ^~~~~~
/home/crazyproger/sandbox/gpu-2025/3822B1PE3/9_gelu_ocl/kazunin_nikita/gelu_ocl.cpp:8:1: note: ‘strlen’ is defined in header ‘<cstring>’; did you forget to ‘#include <cstring>’?
    7 | #include <cmath>
  +++ |+#include <cstring>
    8 | 
